--- a/main.css
+++ b/main.css
@@ -1,1 +1,4 @@
-SiteTitle{text-align: center; font-weight: 400; color: red;}
+.SiteTitle{text-align: center; color: red; font-weight: bold; font-size: 40px; margin-top: 20px; margin-bottom: 20px;}
+.MainText{margin-top: 20px; margin-left: 30px; margin-right: 30px; margin-bottom: 20px; font-weight: 400; font-size: 20px;}
+.IntroImage{margin-right: 10px; width: 480px; height: 270px;}
+.HorizonBox{margin-left: 30px; margin-right: 30px; display: flex; overflow: auto;}
