--- a/main.css
+++ b/main.css
@@ -1,4 +1,18 @@
+@font-face {
+    font-family: 'BIZ-UDPGothic';
+    src: url('resource/font/BIZ-UDPGothic-Regular.ttf') format('truetype');
+}
+
+body
+{
+    font-family: 'BIZ-UDPGothic';
+}
+
 .SiteTitle{text-align: center; color: red; font-weight: bold; font-size: 40px; margin-top: 20px; margin-bottom: 20px;}
+.SubHeader{color: red; font-weight: bold; font-size: 32px; margin-top: 12px; margin-bottom: 12px; margin-left: 30px; margin-right: 30px;}
 .MainText{margin-top: 20px; margin-left: 30px; margin-right: 30px; margin-bottom: 20px; font-weight: 400; font-size: 20px;}
 .IntroImage{margin-right: 10px; width: 480px; height: 270px;}
-.HorizonBox{margin-left: 30px; margin-right: 30px; display: flex; overflow: auto;}
+.HorizonBox{margin-left: 30px; margin-right: 30px; margin-bottom: 15px; display: flex; overflow: auto;}
+
+.Tab{margin-left: 30px; margin-right: 100px; margin-bottom: 15px; display: flex; justify-content: flex-end;}
+.TabLink{padding: 5px; padding-left: 10px; padding-right: 10px; margin-left: 20px; margin-bottom: 10px; border: 1px solid #333333; background-color: white; border-radius: 3px; font-size: 16px;}
