--- a/main.css
+++ b/main.css
@@ -8,6 +8,23 @@ body
     font-family: 'BIZ-UDPGothic';
 }
 
+table
+{
+    border-collapse: collapse;
+    font-size: 18px;
+
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+    overflow-x: auto;
+}
+
+th, td
+{
+    padding: 8px;
+}
+
 .SiteTitle{text-align: center; color: red; font-weight: bold; font-size: 40px; margin-top: 20px; margin-bottom: 20px;}
 .SubHeader{color: red; font-weight: bold; font-size: 32px; margin-top: 12px; margin-bottom: 12px; margin-left: 30px; margin-right: 30px;}
 .MainText{margin-top: 20px; margin-left: 30px; margin-right: 30px; margin-bottom: 20px; font-weight: 400; font-size: 20px;}
@@ -15,4 +32,8 @@ body
 .HorizonBox{margin-left: 30px; margin-right: 30px; margin-bottom: 15px; display: flex; overflow: auto;}
 
 .Tab{margin-left: 30px; margin-right: 100px; margin-bottom: 15px; display: flex; justify-content: flex-end;}
-.TabLink{padding: 5px; padding-left: 10px; padding-right: 10px; margin-left: 20px; margin-bottom: 10px; border: 1px solid #333333; background-color: white; border-radius: 3px; font-size: 16px;}
+.TabLink{width: 120px; padding-top: 5px; padding-bottom: 5px; margin-left: 20px; margin-bottom: 10px; border: 1px solid #333333; background-color: white; border-radius: 3px; font-size: 16px;}
+
+.Table_Align_Left{text-align: start;}
+.Table_Align_Center{text-align: center;}
+.Table_Align_Right{text-align: end;}
