--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ th, td
 
 .Tab{margin-left: 30px; margin-right: 100px; margin-bottom: 15px; display: flex; justify-content: flex-end;}
 .TabLink{width: 120px; padding-top: 5px; padding-bottom: 5px; margin-left: 20px; margin-bottom: 10px; border: 1px solid #333333; background-color: white; border-radius: 3px; font-size: 16px;}
+.PullDown{width: 120px; padding-top: 5px; padding-bottom: 5px; margin-left: 20px; margin-bottom: 10px; border: 1px solid #333333; border-radius: 3px; font-size: 16px; text-align: center;}
 
 .Table_Align_Left{text-align: start; line-height: 133%;}
 .Table_Align_Center{text-align: center; line-height: 133%;}
