--- a/main.css
+++ b/main.css
@@ -48,3 +48,27 @@ th, td
 .Table_Number_300{text-align: center; line-height: 133%; background-image: url('resource/image/result/GT300_number.png'); background-repeat: no-repeat; background-position: center; padding-top: 15px;}
 .Table_Standing_500{text-align: center; line-height: 133%; background-image: url('resource/image/result/GT500_Ranking.png'); background-repeat: no-repeat; background-position: center; padding-top: 15px;}
 .Table_Standing_300{text-align: center; line-height: 133%; background-image: url('resource/image/result/GT300_Ranking.png'); background-repeat: no-repeat; background-position: center; padding-top: 15px;}
+
+.ClassTab{display: flex; max-width: 1200px; margin: auto; margin-bottom: 12px;}
+.SessionTab{display: flex; max-width: 1200px; margin: auto;}
+
+.SessionTabLink{position: relative; display: flex; justify-content: center; align-items: center; min-width: 220px; padding: 10px 20px; color: white; background-color: #555; text-decoration: none; 
+    border-left: 1px solid #ccc; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc;}
+
+.SessionTabLink:not(:last-child)::before{content: ""; position: absolute; top: 0; right: -16px; width: 0; height: 0; border-style: solid; border-width: 18px 0px 18px 15px; border-color: transparent transparent transparent #ccc; z-index: 1;}
+.SessionTabLink:not(:last-child)::after{content: ""; position: absolute; top: 0; right: -15px; width: 0; height: 0; border-style: solid; border-width: 18px 0px 18px 15px; border-color: transparent transparent transparent #555; z-index: 2;}
+
+.SessionTabLink.Active500{background-color: #ef0000;}
+.SessionTabLink.Active500:not(:last-child)::after{border-color: transparent transparent transparent #ef0000; z-index: 2;}
+.SessionTabLink.Active300{background-color: #ef9f00;}
+.SessionTabLink.Active300:not(:last-child)::after{border-color: transparent transparent transparent #ef9f00; z-index: 2;}
+
+.SessionTabLink.Disable{background-color: #888; pointer-events: none; cursor: default; width: 100%;}
+
+.ClassTabLink{position: relative; display: flex; width: 50%; color: white; background-color: #555; text-decoration: none; padding: 12px; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc;}
+.ClassTabLink.Disable500{border-left: 1px solid #ccc; align-items: start; justify-content: start;}
+.ClassTabLink.Disable300{border-right: 1px solid #ccc; align-items: end; justify-content: end;}
+.ClassTabLink.Active500{background-color: #ef0000; border-left: 1px solid #ccc; align-items: start; justify-content: start;}
+.ClassTabLink.Active300{background-color: #ef9f00; border-right: 1px solid #ccc; align-items: end; justify-content: end;}
+
+.ResultDiscription{max-width: 1200px; margin: auto;}
